--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ defaults:
     values:
       layout: default
 
-title: Christian Ezeani
+title: Panthera-Jekyll
 subtitle: Full-Stack Developer
 
 # Side Menu Links
