--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ defaults:
 title: Panthera-Jekyll
 subtitle: Full-Stack Developer
 
-# Side Menu Links
+# Side menu
 menu:
   - text: Portfolio
     link: /
@@ -29,7 +29,7 @@ menu:
     link: /resume
     icon: ""
 
-# Socialmedia Icons
+# Social links
 social:
   - name: email
     link: mailto:christian.ezeani@gmail.com
