RubyGem link added

--- a/_config.yml
+++ b/_config.yml
@@ -47,5 +47,9 @@ social_icons:
     link: https://www.twitter.com/christianezeani
     icon: fab fa-twitter
 
+  - name: rubygem
+    link: https://rubygems.org/profiles/christianezeani
+    icon: fas fa-gem
+
 
     
